<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorials_topic</name>
  <version>0.0.0</version>
  <description>ros tutorials package to learn the topic</description>

  <maintainer email="maedalab@todo.todo">maedalab</maintainer>
  <license>Apache License 2.0</license>
  <author email="s1424@st.sasebo.ac.jp">Sora Nagao</author> -->

  <url type="bugtracker">https://github.com/ROBOTICS-GIT/ros_tutorials/issues</url>
  <url type="repository">https://github.com/ROBOTICS-GIT/ros_tutorials.git</url>
  <url type="website">https://www.robotics.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
